--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -12,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HoanMy.NoActionBar">
+
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +21,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".CustomerActivity"></activity>
+        <activity android:name=".NotificationManageActivity"></activity>
+        <activity android:name=".ManagementActivity"></activity>
+        <activity android:name=".ProjectActivity"></activity>
+        <activity android:name=".ManagerActivity"></activity>
+        <activity android:name=".EmployeeListActivity"></activity>
+        <activity android:name=".ExtraInputJobActivity"></activity>
+        <activity android:name=".EmployeeAtivity"></activity>
         <activity android:name="com.zing.zalo.zalosdk.oauth.BrowserLoginActivity">
 
             <intent-filter>
@@ -30,6 +39,14 @@
                 <data android:scheme="zalo-xxxxx" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".receivers.NotificationDismissedReceiver"
+            android:exported="false" >
+        </receiver>
+        <service
+            android:name=".services.NotificationForegroundService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
     <meta-data
         android:name="com.zing.zalo.zalosdk.appID"
