--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -23,7 +24,15 @@
         </activity>
         <activity android:name=".CustomerActivity"></activity>
         <activity android:name=".NotificationManageActivity"></activity>
-        <activity android:name=".ManagementActivity"></activity>
+        <activity android:name=".ManagementActivity">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ProjectActivity"></activity>
         <activity android:name=".ManagerActivity"></activity>
         <activity android:name=".EmployeeListActivity"></activity>
@@ -36,17 +45,20 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="zalo-xxxxx" />
             </intent-filter>
         </activity>
+
         <receiver
             android:name=".receivers.NotificationDismissedReceiver"
-            android:exported="false" >
-        </receiver>
+            android:exported="false"></receiver>
         <service
             android:name=".services.NotificationForegroundService"
             android:enabled="true"
             android:exported="true"></service>
+
+
     </application>
     <meta-data
         android:name="com.zing.zalo.zalosdk.appID"
